[build-system]
requires = ["setuptools", "wheel", "numpy>=1.26.0", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "prone"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.26",
    "cython>=3.0.0",
]

[project.optional-dependencies]
demo = [
    "numpy>=1.26",
    "requests>=2.31",
    "tqdm>=4.0.0",
    "scikit-learn>=1.5.1",
]
